# raven

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt  scrapy.cfg  todo.txt
app/: celeryconfig.py  database.db  db_setup.py  main.py  makefile  pyproject.toml  tasks.py  test.txt  testing.py
app/crawler/: middlewares.py  pipelines.py  run_spider.py  settings.py
app/crawler/spiders/: high_value_link_spider.py
app/internal/: db_setup.py  models.py  secrets.py
docs/: api.md  deployment.md  development.md  overview.md
