[tool.poetry]
name = "pursuit"
version = "0.1.0"
description = ""
authors = ["Phoenix Sheppard <phoenixsheppard28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
dotenv = "^0.9.9"
celery = {extras = ["redis"], version = "^5.5.2"}
sqlmodel = "^0.0.24"
openai = "^1.77.0"
scrapy = "^2.12.0"
trafilatura = "^2.0.0"
crochet = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"